# knowledge-graph

./: README.md  main.py  pyproject.toml
knowledge_graph/: __init__.py  builder.py  models.py  query.py  visualizer.py
knowledge_graph.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
output/: graph.graphml  graph.json  graph.mmd
